@@ -1,3 +1,7 @@
+2011-08-30  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* R/special-func.R (log1mexpm): more careful with NAs.
+
 2011-06-26  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/special-func.R (Bernoulli, Bernoulli.all): first "experiments":
